@@ -5,7 +5,7 @@ use warnings;
 
 use lib "./t/";
 
-use Test::More tests => 1;
+use Test::More tests => 2;
 
 use Test::Run::CmdLine::Iface;
 use Test::Run::CmdLine::Drivers::CmdLineTest;
@@ -16,10 +16,10 @@ use Test::Run::Drivers::CmdLineTest;
     delete $ENV{HARNESS_DRIVER};
 
     {
-        local @Test::Run::CmdLine::Drivers::CmdLineTest::ISA;
-        local @Test::Run::Drivers::CmdLineTest::ISA;
+
         my $iface = Test::Run::CmdLine::Iface->new(
             {
+                'driver_class' => "Test::Run::CmdLine::Drivers::CollectPluginsZedBar",
                 'driver_plugins' => [qw(ZedField BarFieldWithAccum)],
                 'test_files' => [qw(one.t TWO tHREE)],
             }
@@ -31,6 +31,26 @@ use Test::Run::Drivers::CmdLineTest;
         is_deeply(
             $driver->backend_plugins(),
             [qw(ZedField BarField)],
+            "Testing the plugins' collection - Zed + Bar",
+        );
+    }
+
+    {
+        my $iface = Test::Run::CmdLine::Iface->new(
+            {
+                'driver_class' => "Test::Run::CmdLine::Drivers::CollectPluginsBarZed",
+                'driver_plugins' => [qw(BarFieldWithAccum ZedField)],
+                'test_files' => [qw(one.t TWO tHREE)],
+            }
+        );
+
+        my $driver = $iface->_calc_driver();
+
+        # TEST
+        is_deeply(
+            $driver->backend_plugins(),
+            [qw(BarField ZedField)],
+            "Testing the plugins' collection - Bar + Zed",
         );
     }
 }
