@@ -7,6 +7,7 @@ Revision history for Test-Run-CmdLine
         - _calc_driver
     * Added private_backend_plugins() to collect the backend plugins
     from the front-end plugins.
+    * Added more tests.
 
 0.0108     Mon Aug 18 20:03:47 IDT 2008
     * Changed all the initializers to _init() instead of _initialize().
